prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/var_scope_3.diag.txt
ERROR: Unknown variable [x]
testData/diagnostics/var_scope_3.nut:7:6

print(x)
      ^


